--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "node app backend",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "chris l",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.7.0"
-  },
-  "description": ""
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.2"
+  }
 }
